k3s/nginx.yml
kind: Deployment
apiVersion: apps/v1
metadata:
   name: nginx-app
spec:
   replicas: 1
   selector:
      matchLabels:
         app: nginx-app
   template:
      metadata:
         labels:
            app: nginx-app
      spec:
         containers:
            - name: nginx-app
              image: nginx
              ports:
               - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
   name: nginx-app
   labels:
      app: nginx-app
spec:
   ports:
      - port: 9001
        name: nginx-app
        targetPort: 80
   selector:
      app: nginx-app
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`nginx.home`)
    kind: Rule
    services:
    - name: nginx-app
      port: 9001
